--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -12,7 +12,7 @@ menu:
   首頁: / || fas fa-home
   时间轴: /archives/ || fas fa-archive
   标签: /tags/ || fas fa-tags
-  分类: /categories/ || fas fa-folder-open
+  分类: /监控/ || fas fa-folder-open
   友情链接: /link/ || fas fa-link
   关于: /about/ || fas fa-heart
 
