--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -49,6 +49,7 @@ disable_top_img: false
 
 # The banner image of home page
 index_img:
+  img: /img/top.jpeg
 
 # If the banner of page not setting, it will show the top_img
 default_top_img:
