--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -48,7 +48,7 @@ avatar:
 disable_top_img: false
 
 # The banner image of home page
-index_img:
+index_img: 'https://static.zahui.fan/public/Lollipop.svg'
 
 # If the banner of page not setting, it will show the top_img
 default_top_img:
