--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -50,6 +50,13 @@ disable_top_img: false
 # The banner image of home page
 index_img: 'https://static.zahui.fan/public/Lollipop.svg'
 
+# The top_img settings of home page
+# default: top img - full screen, site info - middle (默認top_img全屏，site_info在中間)
+# The position of site info, eg: 300px/300em/300rem/10% (主頁標題距離頂部距離)
+index_site_info_top: 30%
+# The height of top_img, eg: 300px/300em/300rem (主頁top_img高度)
+index_top_img_height: 30em
+
 # If the banner of page not setting, it will show the top_img
 default_top_img:
 
@@ -620,12 +627,7 @@ site_verification:
 #   meta_theme_color_light: "ffffff"
 #   meta_theme_color_dark: "#0d0d0d"
 
-# The top_img settings of home page
-# default: top img - full screen, site info - middle (默認top_img全屏，site_info在中間)
-# The position of site info, eg: 300px/300em/300rem/10% (主頁標題距離頂部距離)
-index_site_info_top:
-# The height of top_img, eg: 300px/300em/300rem (主頁top_img高度)
-index_top_img_height:
+
 
 # The user interface setting of category and tag page (category和tag頁的UI設置)
 # index - same as Homepage UI (index 值代表 UI將與首頁的UI一樣)
