--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -49,7 +49,7 @@ local_search:
 # --------------------------------------
 
 # Favicon（網站圖標）
-favicon: /img/boob.jpg
+favicon: '/img/bog.jpg'
 
 # Avatar (頭像)
 avatar:
