--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: BLOG
-subtitle: 'wwt的博客 - 运维技术分享'
+subtitle: '文涛的博客 - 运维技术分享'
 description: '致力于分享运维开发等技术经验, 由系统运维、脚本编程、devops等分类组成, 涵盖了Docker、k8s、Python、Linux、Prometheus、ElasticSearch、虚拟化等内容。'
 keywords: "Kubernetes,Prometheus,ElasticSearch,OPS,DevOps,运维,Linux,云原生"
 author: wentao
