--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -63,14 +63,14 @@ disable_top_img: false
 index_img: '/img/top.jpeg'
 
 # 这个是标题等距离顶部的比例
-index_site_info_top: 30%
+index_site_info_top: 10%
 # 这里是首页大图的高度，默认是满屏幕的， 支持写法 300px/300em/300rem 
-index_top_img_height: 30em
+index_top_img_height: 10em
 # 默认是夜间模式还是白天模式 dark/light
 display_mode: light
 
 # If the banner of page not setting, it will show the top_img
-default_top_img: https://static.zahui.fan/public/Lollipop2.svg
+default_top_img: '/img/top.jpeg'
 
 cover:
   # display the cover or not (是否顯示文章封面)
