--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@
 # Site
 title: BLOG
 subtitle: '阿飞的博客 - 运维技术分享'
-description: '分享运维开发等技术经验, 由系统运维、脚本编程、devops等分类组成, 涵盖了Docker、k8s、Python、Linux、Prometheus、ElasticSearch、虚拟化等内容。'
-keywords: "Kubernetes,Prometheus,ElasticSearch,OPS,DevOps,运维,Linux,云原生"
+description: '分享Linux、Kubernetes、Prometheus、Python、虚拟化等内容。'
+keywords: "Kubernetes,Prometheus,ElasticSearch,DevOps,Linux,Python"
 author: feige
 language: zh-CN
 timezone: 'Asia/Shanghai'
